fix: style on mobile

--- a/a4.css
+++ b/a4.css
@@ -7,10 +7,19 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 210mm;
-  margin: auto;
-  box-shadow: 0 0 10px #ccc;
-  padding: 2em;
   color: #24292e;
   box-sizing: border-box;
+}
+
+@media screen and (min-width: 210mm) {
+  body {
+    width: 210mm;
+    margin: auto;
+    box-shadow: 0 0 10px #ccc;
+    padding: 2em;
+  }
+  body > div {
+    margin-left: -2em;
+    margin-right: -2em;
+  }
 }
